Added fix for text overlays out of bounds

--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckEditBox/Brainf_ckEditBox.xaml
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckEditBox/Brainf_ckEditBox.xaml
@@ -106,9 +106,9 @@
                             CornerRadius="{TemplateBinding CornerRadius}"
                             MinWidth="{ThemeResource TextControlThemeMinWidth}"
                             MinHeight="{ThemeResource TextControlThemeMinHeight}" />
-                        <win2d:CanvasControl
-                            x:Name="TextOverlaysCanvas"
-                            Grid.Row="1"/>
+                        <Canvas Grid.Row="1">
+                            <win2d:CanvasControl x:Name="TextOverlaysCanvas"/>
+                        </Canvas>
                         <ScrollViewer
                             x:Name="ContentScroller"
                             Grid.Row="1"
