--- a/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
@@ -15,6 +15,7 @@
     xmlns:memoryViewer="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.MemoryViewer"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:ide="using:Brainf_ckSharp.Uwp.Controls.Ide"
+    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -30,17 +31,19 @@
             <RowDefinition Height="24"/>
         </Grid.RowDefinitions>
 
-        <!--Console-->
+        <!--Console and IDE-->
         <Pivot
             Grid.Row="0"
             Grid.RowSpan="3"
             Style="{StaticResource ExpandedPivotWithNoHeaderStyle}"
             SelectedIndex="{x:Bind RootHeader.SelectedIndex, Mode=OneWay}">
             <PivotItem>
-                <views:ConsoleView/>
+                <views:ConsoleView attachedProperties:ReactiveViewModelHelper.IsActive="{x:Bind functions:PivotSelectionFunctions.IndexToBool(RootHeader.SelectedIndex, 0), Mode=OneWay, FallbackValue=True}"/>
             </PivotItem>
             <PivotItem>
-                <Grid Background="#FF1E1E1E">
+                <Grid
+                    Background="#FF1E1E1E"
+                    attachedProperties:ReactiveViewModelHelper.IsActive="{x:Bind functions:PivotSelectionFunctions.IndexToBool(RootHeader.SelectedIndex, 1), Mode=OneWay, FallbackValue=False}">
                     <ide:Brainf_ckEditBox
                         Padding="8,108,8,8"
                         VerticalScrollBarMargin="0,100,0,0"/>
