Minor code refactoring

--- a/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
@@ -41,9 +41,7 @@
                 <views:ConsoleView attachedProperties:ReactiveViewModelHelper.IsActive="{x:Bind functions:PivotSelectionFunctions.IndexToBool(RootHeader.SelectedIndex, 0), Mode=OneWay, FallbackValue=True}"/>
             </PivotItem>
             <PivotItem>
-                <Grid
-                    Background="#FF1E1E1E"
-                    attachedProperties:ReactiveViewModelHelper.IsActive="{x:Bind functions:PivotSelectionFunctions.IndexToBool(RootHeader.SelectedIndex, 1), Mode=OneWay, FallbackValue=False}">
+                <Grid Background="#FF1E1E1E">
                     <ide:Brainf_ckEditBox
                         Padding="8,108,8,8"
                         VerticalScrollBarMargin="0,100,0,0"/>
