--- a/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Views.IDEView"
+    x:Class="Brainf_ckSharp.Uwp.Views.IdeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,9 +10,5 @@
     d:DesignWidth="400">
 
     <!--IDE-->
-    <Grid Background="#FF1E1E1E">
-        <ide:Brainf_ckEditBox
-            Padding="8,108,8,8"
-            VerticalScrollBarMargin="0,100,0,0"/>
-    </Grid>
+    <ide:Brainf_ckIde/>
 </UserControl>
